frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
      kubernetes.io/ingress.class: nginx
  name: frontend
spec:
  rules:
  - host: frontend.51.124.57.183.nip.io
    http:
        paths:
        - backend:
            serviceName: frontend
            servicePort: 80
          path: /
